Refactor Java Flight Recorder — Lock Contention (BAD vs GOOD) example